@@ -1,8 +1,8 @@
 Package: ecoval
 Type: Package
 Title: Procedures for Ecological Assessment of Surface Waters
-Version: 1.2.6
-Date: 2020-03-19
+Version: 1.2.7
+Date: 2020-04-24
 Author: Nele Schuwirth <nele.schuwirth@eawag.ch> and Peter Reichert <peter.reichert@eawag.ch> 
   with contributions by Simone Langhans and Christian Michel
 Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
@@ -14,6 +14,6 @@ License: GPL-3
 Depends: R (>= 3.5.0), utility, rivernet, jpeg
 LazyData: true
 NeedsCompilation: no
-Packaged: 2020-03-19 14:24:09 UTC; reichert
+Packaged: 2020-04-24 11:53:46 UTC; peter
 Repository: CRAN
-Date/Publication: 2020-03-20 08:50:05 UTC
+Date/Publication: 2020-04-25 00:40:05 UTC
