@@ -1,5 +1,5 @@
-24618e4dc24e141041af18d7316ad8bf *DESCRIPTION
-851667a73b0ae10d7769f96bf7803a09 *NAMESPACE
+9f1f076c0d93b796540b3fdb6a59e3ea *DESCRIPTION
+86b35b0d12f1b1317384194bcb57edf6 *NAMESPACE
 e4587fa3be329c82ebe65fc38053a5f4 *R/ecoval.plotsymbols.r
 a50ceee4d1d9340e62b1a88b4a8f6190 *R/ecoval.r
 d2a4468a142a097e84d0ab072d78953a *R/ecoval.translate.r
@@ -11,7 +11,7 @@ c167ce18d671a625a9f25e09ff004b85 *R/msk.invertebrates.2010.r
 385b902127cdae5dc7c04058ea5f0c79 *R/msk.macrophytes.2017.calc.types.r
 51fdade746906f577ea53a0c917ecc46 *R/msk.macrophytes.2017.doc.R
 f7e0777732a5d6a7cff111a0ec0a0d25 *R/msk.macrophytes.2017.plaus.crit.R
-2120946016eba2356719be9bcb31d613 *R/msk.macrophytes.2017.prepare.data.R
+fd13ed11e2663eb8ccaf720fea5a1cc0 *R/msk.macrophytes.2017.prepare.data.R
 98850c0050aa4533b4efe73322c26481 *R/msk.macrophytes.2017.r
 5dac1ce97eafebf1d7c8f24397c85806 *R/msk.macrophytes.2017.read.compile.evaluate.R
 2ac81edeffab8d892a41b1f1b245bcfc *R/msk.morphol.1998.r
@@ -23,25 +23,25 @@ b1bd4483ea43417272fc4d3f0905466d *R/val.heavymetals.r
 6fd4d702c4430ae1af6356e0f2881f31 *R/val.micropoll.r
 1c48f57e36076cfc14c9f8c71f42c543 *R/val.pesticides.r
 36d30a7475c880341d56c355fca4c6a1 *R/val.spear.r
-4d24c31bab23de39ea3a00bbdab4f231 *data/ecoval_data.RData
-f7ccfc6889e89ef687204c28ad96a387 *inst/NEWS
+53a3ba7eff3496cd593ad4a132ab7038 *data/ecoval_data.RData
+ae23e095789a55ceb15f07e0b1bb9233 *inst/NEWS
 c78a3fa4b662cd98ec8410b530ee0543 *inst/ecoval.dictionaries.default.dat
 a9a12605ac8ec47ef0eaf819b6e30fdf *inst/ecoval_manual_plots.r
 362c32d88bcdc8d761c4aaa7696146f1 *inst/msk.macrophytes.2017_ListTaxa.dat
 5bde5920014e5b60509cc142a05e1eee *inst/msk.macrophytes.2017_RiverTypes_DefLimitsUnc.dat
 bba7aab399abb17c41be1db2d19e8a81 *inst/msk.macrophytes.2017_RiverTypes_DefObsUnc.dat
 d23e521f5f4d6999791fe3ab38b8fcee *inst/msk.macrophytes.2017_RiverTypes_DefStruct.dat
-78548c96d8b886e6b41f630744244d2a *man/ecoval-package.Rd
+83775b4758de978a82b5c3a659be5287 *man/ecoval-package.Rd
 3f1259d11e192aa01a3b8878ed6d0869 *man/ecoval.dict.Rd
 bb1307e6a6af63bc315c0d3fb21a0bcc *man/ecoval.dictionaries.default.Rd
 f208b27d5e32a1874127df9036289c01 *man/ecoval.plotsymbols.Rd
 bd1b0bd057ba3625bdfaef5416ad9a29 *man/ecoval.river.create.Rd
 9fd4111269762dc22939770a82f9b16f *man/ecoval.translate.Rd
-db1f0584354109965ea2b816aadf7277 *man/figures/lakemorphol2016.pdf
+e9047a28ea47396cbba49c07f9d00089 *man/figures/lakemorphol2016.pdf
 344ae730ead3f8ebd428e8a0e49700bd *man/figures/lakemorphol2016.png
-dd88a2ba53fa67b9814f52980ed83f59 *man/figures/lakemorphol2016French.pdf
+eb2095c8ece049ae5aa317730a15e975 *man/figures/lakemorphol2016French.pdf
 f5282832b04009c1d7259f8fd477ed95 *man/figures/lakemorphol2016French.png
-f3edad47137ac8f01939ae13e1b510f0 *man/figures/lakemorphol2016German.pdf
+9e6232ac67f5f88ee47e635c0451086b *man/figures/lakemorphol2016German.pdf
 d5121b7634b08c7519b9304844a05e50 *man/figures/lakemorphol2016German.png
 6a486b51365848aadf3682e018ae49d8 *man/lake.morphol.2016.aggregate.val.spatial.Rd
 f358cc735e427e6c8922e15c4ce9fb2b *man/lake.morphol.2016.create.Rd
@@ -52,7 +52,7 @@ ac17fe2e58bea1c153cf63a2dae556ba *man/msk.diatoms.2007.create.Rd
 508e91eb801fa5c56f9c7ec090862d87 *man/msk.fish.2004.create.Rd
 150c99fe1a5b5e1eea91e4de05524e08 *man/msk.hydrol.2011.aggregate.Rd
 82ca81e7244a1550d8a66eded2069fc9 *man/msk.hydrol.2011.create.Rd
-cc6902f2783000b34e5f4104dbbf5d21 *man/msk.invertebrates.2010.create.Rd
+a289c9e33d4182ab402c51146960d950 *man/msk.invertebrates.2010.create.Rd
 f801162b020c1d7c9924c43502713521 *man/msk.macrophytes.2017.addminbonusmalus.Rd
 a245b7f5f39b14d0a117fa1225706bac *man/msk.macrophytes.2017.calc.types.Rd
 6d77677e132d71c0a191a6309962af9c *man/msk.macrophytes.2017.create.Rd
@@ -74,7 +74,7 @@ fa270294560241568aca0916c4d1f076 *man/msk.morphol.1998.aggregate.Rd
 d2193534041d2b96c1e24dc00308c626 *man/msk.nutrients.2010.create.Rd
 448b29709e13c41dbc44b01fbccff647 *man/msk.physapp.2007.create.Rd
 9e7fd6c6303b19b3490ab2444dbbf0df *man/val.heavymetals.create.Rd
-07f461fcc0f4868b4560a9e45f22de69 *man/val.invertebrates.create.Rd
+b88735b65b63ae35f21021c2e65f4cb2 *man/val.invertebrates.create.Rd
 e1d6ec5e24c0e3950cc7d69f8644e2f3 *man/val.micropoll.create.Rd
 5fdf096c3d6b0c69a90bda7fa59e4cde *man/val.pesticides.create.Rd
 71ce250c349047ec7b713570d38eed31 *man/val.spear.create.Rd
